# qtagger

./: CMakeLists.txt  qtagger.desktop  qtagger.pro  qtagger.qrc  qtagger.rc
docs/: ChangeLog  README.txt
docs/html/en_US/: index.html
docs/html/ru_RU/: index.html
localize/: qtagger_ru_RU.ts
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  config.cpp  config.h  configdialog.cpp  configdialog.h  configdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtagger.cpp  qtagger.h  tag.cpp  tag.h  tagaudio.cpp  tagaudio.h  trackfileitem.cpp  trackfileitem.h  trackmodel.cpp  trackmodel.h
